--- a/pom.xml
+++ b/pom.xml
@@ -83,4 +83,8 @@
 
   </dependencies>
   
+    <properties>
+      <project.build.sourceEncoding>Cp1251</project.build.sourceEncoding>
+    </properties>
+  
 </project>
