--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,24 @@
     <artifactId>itextpdf</artifactId>
     <version>5.5.13.2</version>
 </dependency>
+
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
   <dependency>
     <groupId>jakarta.servlet</groupId>
     <artifactId>jakarta.servlet-api</artifactId>
@@ -73,6 +91,7 @@
     <artifactId>jakarta.el-api</artifactId>
     <version>4.0.0</version>
 </dependency>
+
         
 <dependency>
     <groupId>com.github.jsimone</groupId>
