--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,15 @@
     <scope>provided</scope>
 </dependency>
 
+  
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
+</dependency>
+
+  
+
   </dependencies>
   
     <properties>
