Исправление каталогов тестов

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java=Cp1251
 encoding//src/main/webapp/auth.jsp=UTF-8
+encoding//src/test/java=Cp1251
 encoding/<project>=Cp1251
